<resources>
    <string name="app_name">Склад</string>
    <string name="login">Email:</string>
    <string name="login_hint">Введите email</string>
    <string name="password">Пароль:</string>
    <string name="password_hint">Введите пароль</string>
    <string name="login_button_text">Войти</string>
    <string name="error_login">Ошибка при попытке логина. Проверьте вводимые данные и попробуйте снова</string>
    <string name="storedItemName">Название:</string>
    <string name="storedItemStatus">ОС:</string>
    <string name="error_get_docs">Не удалось получить документы с сервера.</string>
    <string name="fieldDeviceName">deviceName</string>
    <string name="fieldPlatformName">platform</string>
    <string name="fieldMemoryInfo">memoryInfo</string>
    <string name="fieldCameraInfo">cameraInfo</string>
    <string name="fieldColorsAvailable">colorsAvailable</string>
    <string name="fieldDevicePrice">devicePrice</string>
    <string name="register_button_text">Зарегистрировать</string>
    <string name="btn_register_text">Зарегистрировать</string>
    <string name="register_username">Имя пользователя</string>
    <string name="register_username_hint">Введите имя пользователя</string>
    <string name="register_email">Email</string>
    <string name="register_email_hint">Введите email</string>
    <string name="register_password">Пароль:</string>
    <string name="register_email_password">Введите пароль</string>
    <string name="register_email_password_again">Введите пароль повторно</string>
    <string name="register_succeed">Новый пользователь успешно зарегистрирован</string>
    <string name="error_register">Во время регистрации нового пользователя произошла ошибка</string>
    <string name="wrong_data">Проверьте правильность введенных данных</string>
    <string name="action_add_item">Добавить элемент</string>
    <string name="add_item_device_name">Название устройства:</string>
    <string name="add_item_hint_device_name">Введите название утройства</string>
    <string name="add_item_device_platform">ОС устройства:</string>
    <string name="add_item_hint_device_platform">Введите наименование ОС устройства</string>
    <string name="add_item_camera_info">Информация о камере:</string>
    <string name="add_item_hint_camera_info">Введите информацию о камере</string>
    <string name="add_item_available_colors_info">Доступные цвета:</string>
    <string name="add_item_hint_available_colors_info">Доступные цвета через запятую</string>
    <string name="add_item_price">Цена устройства (руб):</string>
    <string name="add_item_hint_available_amount_info">Цена устройства</string>
    <string name="button_add">Добавить</string>
    <string name="error_add_item">Ошибка при добавлении нового устройства в базу данных</string>
    <string name="succed_add_item">Устройство успешно добавлено в базу данных</string>
    <string name="change_item_text">Изменить запись</string>
    <string name="action_edit_item">Редактировать запись</string>
    <string name="error_update_item">Во время обновления информации об устройстве произошла ошибка</string>
    <string name="add_color">Добавить цвет</string>
    <string name="remove_color">Удалить цвет</string>
    <string name="increase_item_count">Увеличить цену\nна складе</string>
    <string name="decrease_item_count">Уменьшить цену\nна складе</string>
    <string name="enter_color">Введите цвет</string>
    <string name="add">Добавить</string>
    <string name="remove">Удалить</string>
    <string name="close">Закрыть</string>
    <string name="continue_action">Продолжить</string>
    <string name="title_increse_count">Увеличить цену</string>
    <string name="title_decrese_count">Уменьшить цену</string>
    <string name="rub">Руб</string>
    <string name="button_clear">Сбросить</string>
    <string name="action_remove_item">удалить запись</string>
    <string name="document_removed">Документ успешно удален</string>
    <string name="error_document_not_removed">Во время удаления документа произошла ошибка</string>
    <string name="action_prepare_item">Подготовить к отгрузке</string>
    <string name="fieldBuyers">buyers</string>
    <string name="error">Во время выполнения действия произошла ошибка</string>
    <string name="add_waiting_buyer">Добавлен покупатель,\nожидающий товар</string>
    <string name="error_delete_and_add">Нельзя одновременно удалять и добавлять цвета устройства. Сохраните текущие ихменения сначала или нажмите кнопку сброс.</string>
    <string name="items_to_send">Пользователи ожидащие отправки:</string>
    <string name="action_filter_item">Фильтр</string>
    <string name="action_waiting_list">Покупатели, ожидающие отправки:</string>
    <string name="button_text_send">Отгрузить</string>
    <string name="sendToUser">Отгрузить пользователю</string>
    <string name="fieldLastSend">lastSend</string>
    <string name="lastChange">Последнее изменение:\n</string>
    <string name="last_change">Последняя отгрузка совершена в:</string>
    <string name="storedItemPrice">Цена:</string>
    <string name="filter_price_from">Цена от</string>
    <string name="filter_price_up_to">до</string>
    <string name="filter_platform">Платформа</string>
    <string name="titleChooseFilterProperties">Выберите настройки фильтра</string>
    <string name="include_lower">Включая\nнижнюю\nграницу</string>
    <string name="include_upper">Включая\nверхнюю\nграницу</string>
    <string name="colorsFilter">Цвета:</string>
    <string name="action_logout_item">Сменить пользователя</string>
    <string name="cant_send_push">Не удалось отправить push сообщение грузчику. Свяжитесь с технической поддержкой</string>
    <string name="push_sended">Сообщение грузчику успешно отправлено</string>
    <string name="cant_send_email">Не удалось отправить email в бухгалтерию. Свяжитесь с технической поддержкой</string>
    <string name="email_was_sended">Email в бухгалтерию успешно отправлен</string>
    <string name="sms_was_sended">Sms курьеру успешно отправлено</string>
    <string name="cant_send_sms">Не удалось отправить sms сообщение курьеру. Свяжитесь с технической поддержкой</string>
    <string name="open_send_list">Открыть лист отгрузки</string>
    <string name="addUserInList">Добавить покупателя</string>
    <string name="color_filter_hint">Введите необходимые\nцвета через зяпятую</string>
    <string name="comment_for_loader">Комментарий для грузчика:</string>
    <string name="fieldSendInfo">sendInfo</string>
    <string name="item_info">Комментарий к отгрузке:</string>
    <string name="editInfo">редактировать</string>
    <string name="saveInfo">сохранить</string>
    <string name="no_info">По товару в настоящее время нет комментария (отредактиуйте и измените информацию)</string>
    <string name="take_item">"Вы должны забрать со склада товар: "</string>
    <string name="from">storehouse android app</string>
    <string name="device">Устройство:</string>
    <string name="sold">" было продано"</string>
    <string name="you_should_take">"Вы должны забрать со склада товар "</string>
    <string name="and_prepare">" и подготовить к отправке"</string>
</resources>
