<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context="prof_itgroup.ru.storehouseapp.Activities.AddItemActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/label_style"
                android:text="@string/add_item_device_name" />

            <EditText
                android:id="@+id/etDeviceName"
                style="@style/textStyle"
                android:hint="@string/add_item_hint_device_name" />

            <TextView
                style="@style/label_style"
                android:layout_marginTop="8dp"
                android:text="@string/add_item_device_platform" />

            <EditText
                android:id="@+id/etDevicePlatform"
                style="@style/textStyle"
                android:hint="@string/add_item_hint_device_platform" />

            <TextView
                style="@style/label_style"
                android:layout_marginTop="8dp"
                android:text="@string/add_item_camera_info" />

            <EditText
                android:id="@+id/etDeviceCameraInfo"
                style="@style/textStyle"
                android:hint="@string/add_item_hint_camera_info" />

            <TextView
                style="@style/label_style"
                android:layout_marginTop="8dp"
                android:text="@string/add_item_available_colors_info" />

            <EditText
                android:id="@+id/etDeviceColors"
                style="@style/textStyle"
                android:hint="@string/add_item_hint_available_colors_info" />

            <TextView
                style="@style/label_style"
                android:layout_marginTop="8dp"
                android:text="@string/add_item_available_amount_info" />

            <EditText
                android:id="@+id/etDevicesAvailable"
                style="@style/textStyle"
                android:hint="@string/add_item_hint_available_amount_info" />

            <Button
                android:id="@+id/btnAddItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:text="@string/button_add" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
